@@ -22,9 +22,9 @@ package org.apache.lucene.util.automaton;
  * has too many states.
  */
 public class TooComplexToDeterminizeException extends RuntimeException {
-  private final Automaton automaton;
-  private final RegExp regExp;
-  private final int maxDeterminizedStates;
+  private transient final Automaton automaton;
+  private transient final RegExp regExp;
+  private transient final int maxDeterminizedStates;
 
   /** Use this constructor when the RegExp failed to convert to an automaton. */
   public TooComplexToDeterminizeException(RegExp regExp, TooComplexToDeterminizeException cause) {
@@ -37,7 +37,7 @@ public class TooComplexToDeterminizeException extends RuntimeException {
 
   /** Use this constructor when the automaton failed to determinize. */
   public TooComplexToDeterminizeException(Automaton automaton, int maxDeterminizedStates) {
-    super("Determinizing automaton would result in more than " + maxDeterminizedStates + " states.");
+    super("Determinizing automaton with " + automaton.getNumStates() + " states and " + automaton.getNumTransitions() + " transitions would result in more than " + maxDeterminizedStates + " states.");
     this.automaton = automaton;
     this.regExp = null;
     this.maxDeterminizedStates = maxDeterminizedStates;
